--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@rocketseat/unform": "^1.5.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.2",
     "date-fns-tz": "^1.0.7",
@@ -11,8 +10,8 @@
     "immer": "^3.1.3",
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.0",
@@ -38,9 +37,10 @@
     "testMatch": [
       "**/__tests__/**/*.test.js"
     ],
-    "setupFiles-AfterEnv": [
+    "setupFilesAfterEnv": [
       "@testing-library/react/cleanup-after-each",
-      "@testing-library/jest-dom/extend-expect"
+      "@testing-library/jest-dom/extend-expect",
+      "jest-localstorage-mock"
     ],
     "moduleNameMapper": {
       "^~/(.*)": "<rootDir>/src/$1"
@@ -74,7 +74,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "jest-localstorage-mock": "^2.4.0",
     "prettier": "^1.18.2",
-    "react-app-rewired": "^2.1.3"
+    "react-app-rewired": "^2.1.3",
+    "react-test-renderer": "^16.9.0"
   }
 }
